--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,10 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "baseUrl": "./src",
-    "outDir": "./dist",
+    "outDir": "./lib",
     "module": "commonjs",
     "target": "es5",
+    "declaration": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "allowJs": true,
